# fbrpc

./: .gitignore  CMakeLists.txt  Readme.md  generate_project.bat
fbrpc/: CMakeLists.txt  ssFlatBufferRpc.cpp  ssFlatBufferRpc.h
fbrpc/core/: ssBuffer.h  ssCommon.h  ssEmitter.h  ssLogger.h  ssPackage.h  ssPromise.h  ssUniqueFunction.h  ssVersion.h
fbrpc/generator/: ssCppGenerator.cpp  ssCppGenerator.h  ssCppPrinter.cpp  ssCppPrinter.h  ssGenerator.cpp  ssGenerator.h  ssLanguageGenerator.h  ssNodeGenerator.cpp  ssNodeGenerator.h  ssPrinter.cpp  ssPrinter.h  ssTSGenerator.cpp  ssTSGenerator.h  ssTSPrinter.cpp  ssTSPrinter.h  ssUtils.h
fbrpc/generator/ts/: ssTSComponentGenerator.cpp  ssTSComponentGenerator.h  ssTSDocGenerator.cpp  ssTSDocGenerator.h  ssTSEventGenerator.cpp  ssTSEventGenerator.h  ssTSGenerator.cpp  ssTSGenerator.h  ssTSPrinter.h  ssTSTypesGenerator.cpp  ssTSTypesGenerator.h  ssTSUtils.cpp  ssTSUtils.h
fbrpc/impl/uvw/: ssTCPClient.cpp  ssTCPClient.h  ssTCPConnection.cpp  ssTCPConnection.h  ssTCPFlatBufferRpc.cpp  ssTCPFlatBufferRpc.h  ssTCPServer.cpp  ssTCPServer.h  ssUvLoop.cpp  ssUvLoop.h
fbrpc/interface/: ssClient.h  ssConnection.h  ssServer.h  ssService.cpp  ssService.h  ssStub.h
fbrpc/utils/: ssTimer.cpp
generator/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  ssFlatBufferRpc.h
lib/core/: ssBuffer.h  ssError.h  ssFlatBufferHelper.h  ssLogger.h  ssPackage.h  ssPromise.h  ssUniqueFunction.h
lib/generator/: ssGenerator.cpp  ssGenerator.h  ssPrinter.cpp  ssPrinter.h
lib/impl/uvw/: ssTCPClient.cpp  ssTCPClient.h  ssTCPConnection.h  ssTCPFlatBufferRpc.cpp  ssTCPFlatBufferRpc.h  ssTCPServer.cpp  ssTCPServer.h  ssUvLoop.cpp  ssUvLoop.h
lib/interface/: ssClient.h  ssConnection.h  ssServer.cpp  ssServer.h  ssService.cpp  ssService.h  ssStub.h
lib/utils/: ssTimer.cpp  ssTimer.h
tests/: CMakeLists.txt  main.cpp
tests/proto/: Example.fbs
